--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     padding: 20px;
     margin: 0;
     color: #23534E;
-    
+    border: 2px solid black;
   }
 
     header h1 {
@@ -26,6 +26,7 @@
     justify-content: center;
     align-items: center;
     font-size: 75px;
+    border: 2px solid white;
   }
 
     header p{
@@ -34,120 +35,101 @@
     align-items: center;
     margin-top: 0px;
     font-size: 20px;
+    border: 2px solid pink;
 }
 nav{
     background-color: #23534E;
     display: flex;
     justify-content: center;
-    align-items: space-between;
+    align-items: center;
+    border: 2px solid purple;
 }
     nav ul{
     background-color: #23534E;
-    padding: 5px;
+    padding: 20px;
     text-decoration: none;
     color: #D8DDD1;
     display: flex;
-        
+    border: 2px solid orange;
+    width: 50%;
+    justify-content: space-around;
 }
     nav a {
     text-decoration: none;
     color: #D8DDD1;
     padding: 10px;
-    
-  }
-
-    aside{
-    background-color: #72AB9D;
-    padding: 20px;
-    height: 100%;
+    border: 2px solid yellow;
     
   }
   
   .main-section{
     display: flex;
     flex-direction: row-reverse;
+    align-items: flex-start;
     height: 100%;
-    width: 100vw;
+    width: auto;
     margin: 0px;
+    border: 2px solid blue;
   }
 
   .side-bar{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-end;
+    width: 30%;
+    height: 100vh;
+    border: 2px solid greenyellow;
+    background-color: #72AB9D;
+    padding: 20px;
   }
 
-  .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; 
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100vh;
-    width: 100vw;
-    margin: 20px;
-}
-
-.card {
-    width: 100%;
-    height: 150px;
-    padding: 30px;
-    margin: 20px;
-    background-color: #F78A77;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    border-radius: 10px;
-}
-.card-content{
+.content{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 50%;
-}
-.card-image {
-    margin-right: 20px;
-}
-
-.card img{
-    width: auto;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    overflow: hidden;  
-    margin: 0px 10px;
-}
-.card h2{
-    font-size: 25px;
-    font-weight: bold;
-    color: black;
-    margin: 5px 0px 0px 0px;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 20px;
+    padding: 20px;
+    border: 2px solid red;
 }
 
-.card p{
-    font-size: 15px;
-    color: black;
-    margin: 10px 0px;
-    overflow: scroll;
-    border-top: 3px solid #d7614d;
-    padding: 10px 0px;
-}
-
-/* .buttons{
-    display: flex;
+.dropdown{
+    border: 2px solid lightblue;
+    display: inline-block;
     flex-direction: row;
     justify-content: flex-start;
-    width: 100%;
-} */
-.card button{
-    background-color: #23534E;
-    color: #D8DDD1;
-    border: none;
+    align-items: center;
+}
+
+.dropdown a{
+    display: block;
+    color: black;
+    text-decoration: none;
     padding: 10px;
-    border-radius: 5px;
-    cursor: pointer; 
-    margin: 0px 10px; 
+
+}
+
+.dropdown .dropdown-content{
+    position: absolute;
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: space-between;
+    border: 2px solid black;
+    padding: 20px;
 }
