--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ nav{
     width: auto;
     margin: 0px;
     border: 2px solid blue;
+    padding: 0px;
   }
 
   .side-bar{
@@ -92,16 +93,26 @@ nav{
     width: 100vw;
     height: 100vh;
     margin: 20px;
-    padding: 20px;
+    padding: 10px;
     border: 2px solid red;
 }
 
 .dropdown{
     border: 2px solid lightblue;
-    display: inline-block;
+    display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+}
+
+.dropbtn{
+    background-color: #f78a77;
+    color: #fefbea;
+    padding: 10px;
+    font-size: 12px;
+    height: auto;
+    width: fit-content;
+    
 }
 
 .dropdown a{
@@ -116,20 +127,53 @@ nav{
     position: absolute;
     display: none;
     background-color: #f9f9f9;
-    min-width: 160px;
+    width: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown:hover .dropdown-content{
     display: block;
+    width: auto;
 }
 
 .buttons{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: space-between;
+    flex-wrap: wrap;
+    align-items: space-around;
     border: 2px solid black;
     padding: 20px;
+    
+}
+
+.plan-btn{
+    background-color: #23534E;
+    color: #fefbea;
+    padding: 10px;
+    font-size: 12px;
+    
+}
+
+.site-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    padding: 20px;
+}
+
+.site-info p{
+    font-size: 1rem;
+    margin: 5px;
+    color: #23534E;
+}
+
+.site-info h2{
+    font-family: "Caprasimo", serif;
+    font-size: 2rem;
+    color: #23534E;
+    margin: 5px;
 }
