--- a/styles.css
+++ b/styles.css
@@ -15,22 +15,27 @@
     font-style: normal;
     font-size: 1rem;
 }
-
+/* W3 schools helped me do the image in the background */
    header{
     background-color: #72AB9D;
     padding: 20px;
     margin: 0;
     color: #23534E;
     border: 2px solid black;
+    background-image: url(waves.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
     header h1 {
     font-family: "Caprasimo", serif;
     font-weight: 100;
     font-style: normal;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 75px;
     border: 2px solid white;
   }
@@ -63,11 +68,13 @@ nav{
 }
     nav a {
     text-decoration: none;
-    color: #D8DDD1;
+    color: #fefbea;
     padding: 10px;
     border: 2px solid yellow;
     font-family: "Nunito", sans-serif;
     font-size: 1rem;
+    background-color: #f78a77;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     
   }
   
@@ -75,14 +82,14 @@ nav{
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
-    height: auto;
+    height: 100%;
     width: auto;
     margin: 0px;
     border: 2px solid blue;
     padding: 0px;
   }
 
-  .side-bar{
+  /* .side-bar{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -93,15 +100,15 @@ nav{
     background-color: #72AB9D;
     padding: 20px;
     margin: 0px;
-  }
+  } */
 
 .content{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
+    width: auto;
+    height: auto;
     margin: 20px;
     padding: 10px;
     border: 2px solid red;
@@ -193,21 +200,23 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: space-around;
     border: 2px solid black;
     flex-wrap: wrap;
     margin: 5px;
+    width: 100%;
 }
 .photos img{
-    width: auto;
-    height: 200px;
+    width: 225px;
+    height: auto;
     margin: 10px;
-
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-footer{
+.footer {
     position: relative;
     bottom: 0;
+    left: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -217,5 +226,4 @@ footer{
     color: #D8DDD1;
     padding: 20px;
     border: 2px solid black;
-    margin: 0px;
 }
